welcome.lessons.welcome.loopdowhile.Poucet2.scala.error
Poucet:30: error: nbBiscuit is already defined as variable nbBiscuit
var nbBiscuit:Int=0
    ^